# Releases

## perceval 1.0.5 - (2024-08-13)

**Bug fixes:**

 * Fixed missing backend name in usage string (#799)\
   The `perceval` command-line tool now correctly displays the backend
   name in the usage string when using the `--help` option.


  ## perceval 1.0.4 - (2024-08-09)
  
  * Update Poetry's package dependencies

  ## perceval 1.0.3 - (2024-08-02)
  
  * Update Poetry's package dependencies

## perceval 1.0.2 - (2024-06-21)

**Bug fixes:**

 * Empty stats for moved/copied files in git\
   Stats about changes on a file were not reported correctly for files
   that where moved to a subdirectory. They were reported as an invalid
   entry and without action associated. For example, the file
   `dir/filename` was moved to `dir/subdir/filename`, but it was reported
   as `dir//filename`. Therefore, the entry of the file
   `dir/subdire/filename` didn't have the stats about added and deleted
   lines. This error has been fixed and stats are reported correctly.


  ## perceval 1.0.1 - (2024-05-09)
  
  * Update Poetry's package dependencies

## perceval 1.0.0 - (2024-04-13)

**New features:**

 * First major release\
   GrimoireLab reached a stable status. This is our first major release.


## perceval 0.25.0 - (2024-03-27)

**New features:**

 * Include recovery mode for Git backend\
   Include a new option in Git that allows continuing to fetch commits
   from the previous execution using the last commit. The option is
   `--recovery <commit>`. The last commit can be obtained from the offset
   in the summary object of the last execution or the last item.


  ## perceval 0.24.1 - (2024-03-12)
  
  * Update Poetry's package dependencies

## perceval 0.24.0 - (2024-03-01)

**New deprecations:**

 * NNTP backend deprecated\
   NNTP is deprecated. It is not compatible with Python 3.11.8 and will
   be removed in a future version.


  ## perceval 0.23.6 - (2024-02-08)
  
  * Update Poetry's package dependencies

  ## perceval 0.23.5 - (2024-01-30)
  