@@ -1,2 +1,2 @@
-# File auto-generated by semverup on 2024-08-30 15:07:27.892462
-__version__ = "1.0.6-rc.1"
+# File auto-generated by semverup on 2024-08-30 16:03:02.486590
+__version__ = "1.0.6"
