@@ -1,0 +1,9 @@
+## perceval 1.0.6 - (2024-08-30)
+
+**Bug fixes:**
+
+ * Fix issue #782 (#782)\
+   The issue was that perceval would not delete old tags from upstream
+   references. This change deletes tags locally if tags are deleted
+   upstream.
+
